--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,11 @@
+
+
 {
   "rewrites": [
+    {
+      "source": "/api/:match*",
+      "destination": "https://p-manager-c7lm.onrender.com/api/:match*"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
